--- a/manifest-v2-equalsecrets.json
+++ b/manifest-v2-equalsecrets.json
@@ -1,7 +1,7 @@
 {
    "name":"Equal Secrets",
    "short_name":"Equal Secrets",
-   "start_url":"https://v2.equalsecrets.biz.id",
+   "start_url":"https://v2.equalsecrets.my.id",
    "display":"standalone",
    "background_color":"#ffffff",
    "theme_color":"#6a329f",
