--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
    "start_url":"https://www.equalsecrets-yaoi.my.id",
    "display":"standalone",
    "background_color":"#ffffff",
-   "theme_color":"#6a329f",
+   "theme_color":"#000000",
    "description":"Equal Secrets merupakan Translator Community atau Fan Translation yang berkomitmen untuk menyediakan Terjemahan Bahasa Indonesia berkualitas tinggi.",
    "icons":[
       {
