--- a/manifest-equalsecrets.json
+++ b/manifest-equalsecrets.json
@@ -83,24 +83,14 @@
          "description": "Daftar akun baru"
       },
       {
-         "name": "Reset Password",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/reset-password.html",
-         "description": "Atur ulang kata sandi Anda"
-      },
-      {
          "name": "Paket Premium",
          "url": "https://www.equalsecrets-yaoi.my.id/p/paket-premium.html",
          "description": "Lihat paket premium yang tersedia"
       },
       {
-         "name": "List Judul",
-         "url": "https://www.equalsecrets-yaoi.my.id/search/label/Series",
+         "name": "List Judul - Sitemap",
+         "url": "https://www.equalsecrets-yaoi.my.id/p/sitemap-v5.html",
          "description": "Lihat daftar judul"
-      },
-      {
-         "name": "Hak Cipta",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/hak-cipta-dan-kewajiban-staff.html",
-         "description": "Informasi hak cipta"
       },
       {
          "name": "Translator",
@@ -108,29 +98,9 @@
          "description": "Informasi tentang translator"
       },
       {
-         "name": "Pedoman Komunitas",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/pedoman-komunitas.html",
-         "description": "Pedoman untuk komunitas"
-      },
-      {
          "name": "Layanan Tambahan",
          "url": "https://www.equalsecrets-yaoi.my.id/p/layanan-tambahan.html",
          "description": "Layanan yang kami tawarkan"
-      },
-      {
-         "name": "Disclaimer",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/disclaimer.html",
-         "description": "Pemberitahuan hukum"
-      },
-      {
-         "name": "Request",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/request.html",
-         "description": "Ajukan permintaan"
-      },
-      {
-         "name": "Terms and Condition",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/terms-and-conditions.html",
-         "description": "Syarat dan ketentuan"
       },
       {
          "name": "Affiliates",
@@ -141,21 +111,6 @@
          "name": "Partnership",
          "url": "https://www.equalsecrets-yaoi.my.id/p/partnership.html",
          "description": "Informasi kemitraan"
-      },
-      {
-         "name": "DMCA",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/dmca.html",
-         "description": "Informasi DMCA"
-      },
-      {
-         "name": "Support Us",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/support-us.html",
-         "description": "Dukungan untuk kami"
-      },
-      {
-         "name": "Support Author",
-         "url": "https://www.equalsecrets-yaoi.my.id/p/support-author.html",
-         "description": "Dukungan untuk penulis"
       },
       {
          "name": "Contact Us",
