--- a/manifest-equalsecrets.json
+++ b/manifest-equalsecrets.json
@@ -4,7 +4,7 @@
    "start_url": "https://www.equalsecrets-yaoi.my.id",
    "display": "standalone",
    "background_color": "#ffffff",
-   "theme_color": "#000000",
+   "theme_color": "rgba(0, 0, 0, 0.5)",
    "description": "Equal Secrets merupakan Translator Community atau Fan Translation yang berkomitmen untuk menyediakan Terjemahan Bahasa Indonesia berkualitas tinggi.",
    "version": "1.2",
    "developer": "Han Haoyu",
