--- a/manifest-equalsecrets.json
+++ b/manifest-equalsecrets.json
@@ -1,17 +1,17 @@
 {
    "name": "Equal Secrets",
    "short_name": "Equal Secrets",
-   "start_url": "https://www.equalsecrets-yaoi.my.id",
+   "start_url": "https://www.equalsecrets-yaoi.my.id/",
    "display": "standalone",
    "background_color": "#ffffff",
-   "theme_color": "rgba(0, 0, 0, 0.5)",
+   "theme_color": "000000",
    "description": "Equal Secrets merupakan Translator Community atau Fan Translation yang berkomitmen untuk menyediakan Terjemahan Bahasa Indonesia berkualitas tinggi.",
    "version": "1.2",
    "developer": "Han Haoyu",
    "keywords": "komik, novel, streaming, wattpad, fan fiction",
    "author": "Han Haoyu",
    "content_type": "komik, novel, fan fiction, streaming",
-   "language": "id",
+   "lang": "id",
    "age_verification": "18+",
    "copyright": "Equal Secrets",
    "app_rating": 5,
