--- a/manifest-equalsecrets.json
+++ b/manifest-equalsecrets.json
@@ -1,7 +1,7 @@
 {
    "name": "Equal Secrets",
    "short_name": "Equal Secrets",
-   "start_url": "https://www.equalsecrets-yaoi.my.id/",
+   "start_url": "https://www.equalsecrets.vip/",
    "display": "standalone",
    "background_color": "#ffffff",
    "theme_color": "#000000",
